--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2024.7.4
 charset-normalizer==3.3.2
 distlib==0.3.8
 Django==5.0.7
+django-redis==5.4.0
 filelock==3.15.4
 idna==3.7
 ngrok==1.3.0
